--- a/resources/settings.json
+++ b/resources/settings.json
@@ -18,6 +18,11 @@
         // An IPv4 address or a domain
         "address": "127.0.0.1",
         "port": 10032
+      },
+      "race": {
+        // An IPv4 address or a domain
+        "address": "127.0.0.1",
+        "port": 10033
       }
     }
   },
@@ -35,6 +40,14 @@
       // An IPv4 address or a domain
       "address": "127.0.0.1",
       "port": 10032
+    }
+  },
+  "race": {
+    // The bind address and port of the race host
+    "bind": {
+      // An IPv4 address or a domain
+      "address": "127.0.0.1",
+      "port": 10033
     }
   }
 }
