--- a/resources/settings.json5
+++ b/resources/settings.json5
@@ -49,5 +49,10 @@
       "address": "127.0.0.1",
       "port": 10033
     }
+  },
+  "data_source": {
+    // Connection string to the postgres database.
+    // Read more here: https://www.postgresql.org/docs/current/libpq-connect.html#LIBPQ-CONNSTRING
+    "connection_string": "postgresql://postgres:example@localhost/soa_dev"
   }
 }
