--- a/3rd-party/CMakeLists.txt
+++ b/3rd-party/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(spdlog)
 add_subdirectory(json)
 
+set(BUILD_SHARED_LIBS OFF)
 set(PostgreSQL_ADDITIONAL_VERSIONS "17")
-#add_subdirectory(libpqxx)
+add_subdirectory(libpqxx)
