--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(alicia-server
 
 option(BUILD_TESTS "Build tests" ON)
 
-find_package(Boost CONFIG REQUIRED)
+find_package(Boost CONFIG)
 
 add_subdirectory(3rd-party SYSTEM)
 
@@ -16,6 +16,8 @@ target_compile_features(project-properties
 
 # Alicia server library
 add_library(alicia-libserver STATIC
+        include/libserver/data/DataDefinitions.hpp
+        include/libserver/data/DataStorage.hpp
         src/libserver/Alicia.cpp
         src/libserver/Util.cpp
         src/libserver/base/Server.cpp
@@ -25,10 +27,7 @@ add_library(alicia-libserver STATIC
         src/libserver/command/proto/LobbyMessageDefines.cpp
         src/libserver/command/proto/RaceMessageDefines.cpp
         src/libserver/command/proto/RanchMessageDefines.cpp
-        include/libserver/data/DataDefinitions.hpp
         src/libserver/data/DataSource.cpp
-        include/libserver/data/DataStorage.hpp
-        include/libserver/data/DataDirector.hpp
         src/libserver/data/DataDirector.cpp
         src/libserver/data/pq/PqDataSource.cpp
         src/libserver/data/pq/SqlUtils.cpp)
