major refactor, cleanup and add licenses

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,47 +9,6 @@ find_package(Boost 1.80.0 MODULE)
 
 add_subdirectory(3rd-party SYSTEM)
 
-# Project properties interface library
-add_library(project-properties INTERFACE)
-target_compile_features(project-properties
-        INTERFACE cxx_std_23)
-
-# Alicia server library
-add_library(alicia-libserver STATIC
-        include/libserver/data/DataDefinitions.hpp
-        include/libserver/data/DataStorage.hpp
-        src/libserver/Util.cpp
-        src/libserver/Stream.cpp
-        src/libserver/base/Server.cpp
-        src/libserver/command/CommandProtocol.cpp
-        src/libserver/command/CommandServer.cpp
-        src/libserver/command/proto/DataDefines.cpp
-        src/libserver/command/proto/LobbyMessageDefines.cpp
-        src/libserver/command/proto/RaceMessageDefines.cpp
-        src/libserver/command/proto/RanchMessageDefines.cpp
-        src/libserver/data/DataDirector.cpp
-        #src/libserver/data/pq/PqDataSource.cpp
-        #src/libserver/data/pq/SqlUtils.cpp
-        src/libserver/chatter/ChatterServer.cpp
-        src/libserver/data/file/FileDataSource.cpp
-        src/libserver/data/file/FileDataSource.cpp)
-
-target_include_directories(alicia-libserver
-        PUBLIC include/)
-target_link_libraries(alicia-libserver
-        PUBLIC project-properties Boost::headers spdlog::spdlog nlohmann_json::nlohmann_json)
-
-# Alicia server executable
-add_executable(alicia-server
-        src/server/main.cpp
-        src/server/Settings.cpp
-        src/server/Scheduler.cpp
-        src/server/tracker/WorldTracker.cpp
-        src/server/lobby/LobbyDirector.cpp
-        src/server/lobby/LoginHandler.cpp
-        src/server/race/RaceDirector.cpp
-        src/server/ranch/RanchDirector.cpp)
-
 # Version variables
 set(AliciaServerBuildName alpha)
 set(AliciaServerBuildVersionMajor ${CMAKE_PROJECT_VERSION_MAJOR})
@@ -61,11 +20,45 @@ configure_file(
         include/server/Version.hpp.in
         generated/Version.hpp)
 
-target_include_directories(alicia-server PRIVATE
-        include/)
+# Project properties interface library
+add_library(project-properties INTERFACE)
+target_compile_features(project-properties
+        INTERFACE cxx_std_23)
+
+# alicia-libserver target
+add_library(alicia-libserver STATIC
+        src/libserver/data/DataDirector.cpp
+        src/libserver/data/file/FileDataSource.cpp
+        #src/libserver/data/pq/PqDataSource.cpp
+        src/libserver/network/Server.cpp
+        src/libserver/network/chatter/ChatterServer.cpp
+        src/libserver/network/command/CommandProtocol.cpp
+        src/libserver/network/command/CommandServer.cpp
+        src/libserver/network/command/proto/CommonStructureDefinitions.cpp
+        src/libserver/network/command/proto/LobbyMessageDefinitions.cpp
+        src/libserver/network/command/proto/RaceMessageDefinitions.cpp
+        src/libserver/network/command/proto/RanchMessageDefinitions.cpp
+        src/libserver/util/Stream.cpp
+        src/libserver/util/Util.cpp)
+target_include_directories(alicia-libserver
+        PUBLIC include/)
+target_link_libraries(alicia-libserver
+        PUBLIC project-properties Boost::headers spdlog::spdlog nlohmann_json::nlohmann_json)
+
+# alicia-server target
+add_executable(alicia-server
+        src/server/main.cpp
+        src/server/Scheduler.cpp
+        src/server/Settings.cpp
+        src/server/lobby/LobbyDirector.cpp
+        src/server/lobby/LoginHandler.cpp
+        src/server/race/RaceDirector.cpp
+        src/server/ranch/RanchDirector.cpp
+        src/server/tracker/WorldTracker.cpp)
+target_include_directories(alicia-server
+        PRIVATE include/)
 target_link_libraries(alicia-server
         PRIVATE project-properties alicia-libserver)
-
 target_include_directories(alicia-server PUBLIC
         "${PROJECT_BINARY_DIR}/generated")
 
