iconv locale conversion test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,7 +18,14 @@ target_sources(util_test_scheduler PRIVATE
 target_link_libraries(util_test_scheduler
         PRIVATE project-properties alicia-libserver)
 
+add_executable(util_test_locale)
+target_sources(util_test_locale PRIVATE
+        src/util/TestLocale.cpp)
+target_link_libraries(util_test_locale
+        PRIVATE project-properties alicia-libserver)
+
 add_test(NAME ProtocolTestMagic COMMAND protocol_test_magic)
 add_test(NAME UtilTestStream COMMAND util_test_stream)
 add_test(NAME UtilTestScheduler COMMAND util_test_scheduler)
+add_test(NAME UtilTestLocale COMMAND util_test_locale)
 
