--- a/3rd-party/CMakeLists.txt
+++ b/3rd-party/CMakeLists.txt
@@ -1,5 +1,6 @@
-add_subdirectory(spdlog)
 add_subdirectory(json)
+add_subdirectory(yaml-cpp)
+add_subdirectory(spdlog)
 
 set(BUILD_SHARED_LIBS OFF)
 set(PostgreSQL_ADDITIONAL_VERSIONS "17")
