--- a/resources/config/game/horses.yaml
+++ b/resources/config/game/horses.yaml
@@ -1,14 +1,16 @@
 horses:
-  faces:
-    collection:
-      - tid: 0
-  coats:
-    collection:
-      - tid: 0
-        faceType: -1
-  manes:
-    collection:
-      - tid: 0
-  tails:
-    collection:
-      - tid: 0
+  sets: {}
+  parts:
+    faces:
+      collection:
+        - tid: 0
+    coats:
+      collection:
+        - tid: 0
+          faceType: -1
+    manes:
+      collection:
+        - tid: 0
+    tails:
+      collection:
+        - tid: 0
