various fixes and quality of life improvements
- all protocol strings are now converted from EUC-KR to UTF8 and vice-versa
- revert string stored as raw bytes because of locales
- docker image now builds with libiconv to support EUC-KR locale
- docker image now builds executable to a /usr/local folder and resources to /var/lib folder
- fix server abusing main thread if TTY was not available (because of non-blocking stdin)
- server takes resource path in the program arguments
- server built in release no longer logs debug message messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,8 @@ if (${MSVC})
     target_compile_options(platform-properties INTERFACE
             /utf-8)
 else()
-
+    target_link_libraries(platform-properties INTERFACE
+            iconv)
 endif()
 
 # alicia-libserver target
@@ -106,6 +107,4 @@ add_custom_command(
         COMMAND ${CMAKE_COMMAND} -E copy_directory
         ${CMAKE_SOURCE_DIR}/resources
         ${CMAKE_CURRENT_BINARY_DIR})
-
-install(TARGETS alicia-server DESTINATION dist)
-install(DIRECTORY resources DESTINATION dist)  
+install(TARGETS alicia-server)
