--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ add_executable(alicia-server
         src/server/lobby/LoginHandler.cpp
         src/server/race/RaceDirector.cpp
         src/server/ranch/RanchDirector.cpp
+        src/server/system/ChatSystem.cpp
         src/server/tracker/WorldTracker.cpp)
 target_include_directories(alicia-server
         PRIVATE include/)
