incubator system and bug fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ add_library(alicia-libserver STATIC
         src/libserver/network/command/proto/RanchMessageDefinitions.cpp
         src/libserver/registry/HorseRegistry.cpp
         src/libserver/registry/OtpRegistry.cpp
+        src/libserver/registry/PetRegistry.cpp
         src/libserver/registry/RoomRegistry.cpp
         src/libserver/util/Locale.cpp
         src/libserver/util/Scheduler.cpp
